-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: core-svc
-
Environment:
Linux, Solaris, Windows
The following nightly tests failed with the below error:
demo/jvmti/hprof/CpuOldTest.java
demo/jvmti/hprof/CpuTimesDefineClassTest.java
demo/jvmti/hprof/CpuTimesTest.java
demo/jvmti/hprof/HeapAllTest.java
demo/jvmti/hprof/HeapBinaryFormatTest.java
demo/jvmti/hprof/HeapDumpTest.java
demo/jvmti/hprof/HeapSitesTest.java
demo/jvmti/hprof/OptionsTest.java
demo/jvmti/hprof/StackMapTableTest.java
command: main HeapBinaryFormatTest HelloWorld
reason: User specified action: run main HeapBinaryFormatTest HelloWorld
elapsed time (seconds): 5.631
----------System.out:(14/1256)----------
Starting: /export/local/common/jdk/baseline/solaris-i586/jre/bin/java -cp /export/local/125926.JAVASE.NIGHTLY.VM.RT_Baseline.2012-11-16.solaris-i586_javase__client_mixed_JT_JDK_demo_jvmti.runTests/results/workDir/classes/demo/jvmti/hprof -Dtest.classes=/export/local/125926.JAVASE.NIGHTLY.VM.RT_Baseline.2012-11-16.solaris-i586_javase__client_mixed_JT_JDK_demo_jvmti.runTests/results/workDir/classes/demo/jvmti/hprof -Xcheck:jni -Xverify:all -agentlib:hprof=heap=dump,format=b,logflags=4 HelloWorld
HPROF ERROR: CRW ASSERTION FAILURE: (classfileMajorVersion <= JVM_CLASSFILE_MAJOR_VERSION) || ((classfileMajorVersion == JVM_CLASSFILE_MAJOR_VERSION) && (classfileMinorVersion <= JVM_CLASSFILE_MINOR_VERSION)) (java/lang/Object:?:-1) [java_crw_demo.c:2301] [hprof_init.c:210]
HPROF TERMINATED PROCESS
HPROF DUMPING CORE
Exit code is 6
<beginning of Error Stream buffer>
HPROF ERROR: CRW ASSERTION FAILURE: (classfileMajorVersion <= JVM_CLASSFILE_MAJOR_VERSION) || ((classfileMajorVersion == JVM_CLASSFILE_MAJOR_VERSION) && (classfileMinorVersion <= JVM_CLASSFILE_MINOR_VERSION)) (java/lang/Object:?:-1) [java_crw_demo.c:2301] [hprof_init.c:210]
HPROF TERMINATED PROCESS
HPROF DUMPING CORE
<end of buffer>
<beginning of Input Stream buffer>
<end of buffer>
----------System.err:(15/901)----------
java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
at DemoRun.runit(DemoRun.java)
at DemoRun.runit(DemoRun.java)
at HeapBinaryFormatTest.main(HeapBinaryFormatTest.java:41)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:474)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:722)
JavaTest Message: Test threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
demo/jvmti/hprof/CpuOldTest.java
demo/jvmti/hprof/CpuTimesDefineClassTest.java
demo/jvmti/hprof/CpuTimesTest.java
demo/jvmti/hprof/HeapAllTest.java
demo/jvmti/hprof/HeapBinaryFormatTest.java
demo/jvmti/hprof/HeapDumpTest.java
demo/jvmti/hprof/HeapSitesTest.java
demo/jvmti/hprof/OptionsTest.java
demo/jvmti/hprof/StackMapTableTest.java
command: main HeapBinaryFormatTest HelloWorld
reason: User specified action: run main HeapBinaryFormatTest HelloWorld
elapsed time (seconds): 5.631
----------System.out:(14/1256)----------
Starting: /export/local/common/jdk/baseline/solaris-i586/jre/bin/java -cp /export/local/125926.JAVASE.NIGHTLY.VM.RT_Baseline.2012-11-16.solaris-i586_javase__client_mixed_JT_JDK_demo_jvmti.runTests/results/workDir/classes/demo/jvmti/hprof -Dtest.classes=/export/local/125926.JAVASE.NIGHTLY.VM.RT_Baseline.2012-11-16.solaris-i586_javase__client_mixed_JT_JDK_demo_jvmti.runTests/results/workDir/classes/demo/jvmti/hprof -Xcheck:jni -Xverify:all -agentlib:hprof=heap=dump,format=b,logflags=4 HelloWorld
HPROF ERROR: CRW ASSERTION FAILURE: (classfileMajorVersion <= JVM_CLASSFILE_MAJOR_VERSION) || ((classfileMajorVersion == JVM_CLASSFILE_MAJOR_VERSION) && (classfileMinorVersion <= JVM_CLASSFILE_MINOR_VERSION)) (java/lang/Object:?:-1) [java_crw_demo.c:2301] [hprof_init.c:210]
HPROF TERMINATED PROCESS
HPROF DUMPING CORE
Exit code is 6
<beginning of Error Stream buffer>
HPROF ERROR: CRW ASSERTION FAILURE: (classfileMajorVersion <= JVM_CLASSFILE_MAJOR_VERSION) || ((classfileMajorVersion == JVM_CLASSFILE_MAJOR_VERSION) && (classfileMinorVersion <= JVM_CLASSFILE_MINOR_VERSION)) (java/lang/Object:?:-1) [java_crw_demo.c:2301] [hprof_init.c:210]
HPROF TERMINATED PROCESS
HPROF DUMPING CORE
<end of buffer>
<beginning of Input Stream buffer>
<end of buffer>
----------System.err:(15/901)----------
java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
at DemoRun.runit(DemoRun.java)
at DemoRun.runit(DemoRun.java)
at HeapBinaryFormatTest.main(HeapBinaryFormatTest.java:41)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:474)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:722)
JavaTest Message: Test threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Test failed - exit return code non-zero (exitStatus==6)
- relates to
-
JDK-6855180 Fix classfile version check in java_crw_demo
-
- Closed
-
-
JDK-8157188 2 test failures in demo/jvmti due to unexpected class file version 53
-
- Closed
-