8003632: HPROF class file version java.lang.RuntimeException errors

Reviewed-by: mchung, lancea